[gd_scene load_steps=5 format=3 uid="uid://dsmjtl6sp4an4"]

[ext_resource type="FontFile" uid="uid://oxelnataqj4p" path="res://fonts/font.ttf" id="1_wxiqv"]
[ext_resource type="Script" uid="uid://d1rbqm4rhwgi8" path="res://scripts/dialogue/dialogue_ui.gd" id="1_y20y4"]

[sub_resource type="Theme" id="Theme_wxiqv"]
default_font = ExtResource("1_wxiqv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jka2"]
bg_color = Color(0, 0, 0, 0.784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y20y4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -176.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_wxiqv")
theme_override_styles/panel = SubResource("StyleBoxFlat_1jka2")

[node name="DialogueBox" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="DialogueSpeaker" type="Label" parent="CanvasLayer/Panel/DialogueBox"]
layout_mode = 2
text = "NPC Name"

[node name="DialogueText" type="Label" parent="CanvasLayer/Panel/DialogueBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue Text..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueOptions" type="HBoxContainer" parent="CanvasLayer/Panel/DialogueBox"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 27.0
grow_horizontal = 0
text = "EXIT"

[connection signal="pressed" from="CanvasLayer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
